project re ssturcutured

--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
         <div class="tools">
             <button class="btn" id="btnPrev">< Prev.</button>
             <button class="btn" id="btnNext">Next > </button>
-            <div class="label" id="curPage"><span>Current Page : </span></div>
+            <div class="label" id="curConcept"><span>Concept : </span></div>
+            <div class="label" id="curPage"><span>Page : </span></div>
         </div>
     </header>
     <div class="main">
@@ -43,9 +44,15 @@
 </body>
 <script src="js/courseStructure.js"></script>
 <script src="js/Stack.js"></script>
-<script src="js/NavStack.js"></script>
+
 <script src="js/Helper.js"></script>
 <script src="js/IframeHelper.js"></script>
+
+
+<script src="js/nav/Concept.js"></script>
+<script src="js/nav/Course.js"></script>
+
+
 <script src="js/Toc.js"></script>
 <script src="js/App.js"></script>
 <script src="js/Main.js"></script>
