back button added,some improvements made

--- a/index.html
+++ b/index.html
@@ -24,10 +24,11 @@
     </aside>
     <header class="topbar">
         <div class="tools">
+            <button class="btn" id="btnReturn">Return</button>
             <button class="btn" id="btnPrev">< Prev.</button>
             <button class="btn" id="btnNext">Next > </button>
-            <div class="label" id="curConcept"><span>Concept : </span></div>
-            <div class="label" id="curPage"><span>Page : </span></div>
+            <div class="label" ><span>Concept : </span><strong id="curConcept"></strong></div>
+            <div class="label"><span>Page : </span><strong id="curPage"></strong></div>
         </div>
     </header>
     <div class="main">
