--- a/index.html
+++ b/index.html
@@ -24,11 +24,12 @@
     </aside>
     <header class="topbar">
         <div class="tools">
-            <button class="btn" id="btnReturn">Return</button>
-            <button class="btn" id="btnPrev">< Prev.</button>
-            <button class="btn" id="btnNext">Next > </button>
+            <input type="button" class="btn" id="btnReturn" value="Return"/>
+            <input type="button" class="btn" id="btnPrev" value="< Prev."/>
+            <input type="button" class="btn" id="btnNext" value="Next >"/>
             <div class="label" ><span>Concept : </span><strong id="curConcept"></strong></div>
             <div class="label"><span>Page : </span><strong id="curPage"></strong></div>
+            <button class="btn" id="btnTest">Test</button>
         </div>
     </header>
     <div class="main">
@@ -57,5 +58,7 @@
 <script src="js/Toc.js"></script>
 <script src="js/App.js"></script>
 <script src="js/Main.js"></script>
+
+<script src="js/Test.js"></script>
 
 </html>
